Install wkhtmltopdf in scrutinizer containers.

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -23,6 +23,10 @@ build:
     memcached: false
     neo4j: false
     rabbitmq: false
+    apt_packages:
+      - xvfb
+      - libfontconfig
+      - wkhtmltopdf
   nodes:
     analysis:
       tests:
