--- a/composer.json
+++ b/composer.json
@@ -26,15 +26,14 @@
         }
     },
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.0",
         "dompdf/dompdf": "^0.8.5 || ^1.0.2",
-        "mikehaertl/phpwkhtmltopdf": "^2.4",
-        "spatie/data-transfer-object": "^2.8.3 || ^3.0.4"
+        "mikehaertl/phpwkhtmltopdf": "^2.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
         "larapack/dd": "^1.1",
-        "league/flysystem-memory": "^1.0",
+        "league/flysystem-memory": "^3.0",
         "smalot/pdfparser": "^0.14.0"
     },
     "scripts": {
