--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     "require": {
         "php": "^8.0",
-        "dompdf/dompdf": "^0.8.5 || ^1.0.2",
+        "dompdf/dompdf": "^1.2.1",
         "mikehaertl/phpwkhtmltopdf": "^2.4"
     },
     "require-dev": {
